# verify

./: .gitignore  AGENTS.md  Cargo.toml  README.md  RELEASE.md  install.sh  test-project.sh
.github/workflows/: ci.yml  release.yml
src/: cache.rs  cli.rs  config.rs  graph.rs  hasher.rs  main.rs  metadata.rs  output.rs  runner.rs  trailer.rs  ui.rs
test-project/: verify.yaml  vfy.yaml
test-project/flows/: checkout.yaml  login.yaml
tests/: cache_tests.rs  integration_test.rs  per_file_tests.rs  subproject_tests.rs
tests/common/: mod.rs
